Version 0.3.0 (2014-xx-xx)
--------------------------
Applied callback to the Payload for an event rather than the event dictionary (#259)
Added page scroll parameters to trackPagePing (#257)
Added social tracking (#258)
Added trackAddToCart and trackRemoveFromCart methods (#260)

Version 0.2.0 (2014-08-07)
--------------------------
Added UUID to payload (#244)
Added automatic timestamp generation (#243)
Added setter methods (#242)
Added timestamp parameter to tracker methods (#240)
Added dependendencies field to package.json (#239)
Added npm button to README (#238)
Updated README (#237)

Version 0.1.0 (2014-08-01)
--------------------------
Initial release