@@ -4,6 +4,7 @@ Applied callback to the Payload for an event rather than the event dictionary (#
 Added page scroll parameters to trackPagePing (#257)
 Added social tracking (#258)
 Added trackAddToCart and trackRemoveFromCart methods (#260)
+Added trackFormChange and trackFormSubmission methods (#261)
 
 Version 0.2.0 (2014-08-07)
 --------------------------
